--- a/index.css
+++ b/index.css
@@ -2,24 +2,22 @@ body {
   margin: auto;
   padding-top: 5rem;
   width: 60vw;
+  font-family: sans-serif;
 }
 
 h1 {
   font-size: 1.5rem;
-  font-family: sans-serif;
 }
 
 h2 {
   color: grey;
   font-size: 0.75rem;
-  font-family: sans-serif;
   font-weight: 100;
 }
 
 h3 {
   color: grey;
   font-size: 0.75rem;
-  font-family: sans-serif;
   font-weight: 400;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
@@ -27,7 +25,6 @@ h3 {
 
 h4 {
   font-size: 1.3rem;
-  font-family: sans-serif;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
@@ -35,14 +32,12 @@ h4 {
 p {
   color: grey;
   font-size: 0.8rem;
-  font-family: sans-serif;
   font-weight: 200;
 }
 
 a {
   color: #23A6F0;
   font-size: 0.7rem;
-  font-family: sans-serif;
   font-weight: 600;
   text-decoration: none;
 }
@@ -72,4 +67,52 @@ img {
 .text {
   margin-left: 3rem;
   display: inline-block;
+}
+
+input{
+    outline: none;
+    border: none;
+}
+
+.multi-selector{
+    width: max-content;
+}
+.select-field{
+    border: 1px solid rgb(187, 187, 187);
+}
+.select-field,.category,.list{
+    width: 100%;
+    background-color: white;
+    padding: 0.3rem;
+}
+.list{
+    display: none;
+}
+.down-arrow{
+    font-size: 1rem;
+    display: inline-block;
+    cursor: pointer;
+    color: grey;
+    transition: 0.2s linear;
+}
+.category{
+    display: block;
+    padding-left: 0;
+}
+.category span{
+    float: right;
+    font-size: 0.6rem;
+    padding-top: 6px;
+}
+.category:hover{
+    background-color: #23A6F040;
+}
+.show{
+    display: block;
+}
+.rotate180{
+    transform: rotate(-180deg);
+}
+label {
+  font-size: 0.8rem;
 }
