--- a/views/start.hbs
+++ b/views/start.hbs
@@ -3,7 +3,7 @@
     <h2>Find your expert (researcher, professor, author, etc.) in the domain of UX Design.)</h2>
       <div class="multi-selector-category">
           <div class="select-field-category">
-            <input type="text" name="categories" placeholder="Choose category" class="input-ca">
+            <input type="text" name="categories" placeholder="All Categories" class="input-ca">
             <span class="down-arrow-category">&blacktriangledown;</span>
           </div>
 
@@ -33,22 +33,26 @@
 
       <div class="multi-selector-expert">
           <div class="select-field-expert">
-            <input type="text" name="categories" placeholder="Choose expert" class="input-ca">
+            <input type="text" name="categories" placeholder="All Experts" class="input-ca">
             <span class="down-arrow-expert">&blacktriangledown;</span>
           </div>
 
           <div class="listExpert">
             <label class="expert">
               <input type="checkbox" name="">
-              Donald Norman
+              All Experts
             </label>
             <label class="expert">
               <input type="checkbox" name="">
-              Nelly Ben Hayoun
+              Scientists
             </label>
             <label class="expert">
               <input type="checkbox" name="">
-              Peter James Thomas
+              Writers
+            </label>
+            <label class="expert">
+              <input type="checkbox" name="">
+              Others
             </label>
           </div>
       </div>
