--- a/views/start.hbs
+++ b/views/start.hbs
@@ -1,108 +1,108 @@
-
-    <h1>User Experience Design Experts</h1>
-    <h2>Find your expert (researcher, professor, author, etc.) in the domain of UX Design.)</h2>
-      <div class="multi-selector-category">
-          <div class="select-field-category">
-            <input type="text" name="categories" placeholder="All Categories" class="input-ca">
-            <span class="down-arrow-category">&blacktriangledown;</span>
-          </div>
-
-          <div class="listCatergory">
-            <label class="category">
-              <input type="checkbox" name="">
-              Category 1
-            </label>
-            <label class="category">
-              <input type="checkbox" name="">
-              Category 2
-            </label>
-            <label class="category">
-              <input type="checkbox" name="">
-              Category 3
-            </label>
-            <label class="category">
-              <input type="checkbox" name="">
-              Category 4
-            </label>
-            <label class="category">
-              <input type="checkbox" name="">
-              Category 5
-            </label>
-          </div>
+<h1>User Experience Design Experts</h1>
+<h2>Find your expert (researcher, professor, author, etc.) in the domain of UX Design.)</h2>
+  <div class="multi-selector-category">
+      <div class="select-field-category">
+        <input type="text" name="categories" placeholder="All categories">
+        <span class="down-arrow-category">&blacktriangledown;</span>
       </div>
 
-      <div class="multi-selector-expert">
-          <div class="select-field-expert">
-            <input type="text" name="categories" placeholder="All Experts" class="input-ca">
-            <span class="down-arrow-expert">&blacktriangledown;</span>
-          </div>
+      <div class="listCatergory">
+        <label class="category">
+          <input type="checkbox" name="">
+          User Research
+        </label>
+        <label class="category">
+          <input type="checkbox" name="">
+          Usability
+        </label>
+        <label class="category">
+          <input type="checkbox" name="">
+          User Interface Design
+        </label>
+        <label class="category">
+          <input type="checkbox" name="">
+          Costumer Experience
+        </label>
+        <label class="category">
+          <input type="checkbox" name="">
+          Computer Programming
+        </label>
+      </div>
+  </div>
 
-          <div class="listExpert">
-            <label class="expert">
-              <input type="checkbox" name="">
-              All Experts
-            </label>
-            <label class="expert">
-              <input type="checkbox" name="">
-              Scientists
-            </label>
-            <label class="expert">
-              <input type="checkbox" name="">
-              Writers
-            </label>
-            <label class="expert">
-              <input type="checkbox" name="">
-              Others
-            </label>
-          </div>
+  <div class="multi-selector-expert">
+      <div class="select-field-expert">
+        <input type="text" name="categories" placeholder="All experts">
+        <span class="down-arrow-expert">&blacktriangledown;</span>
       </div>
 
-      <div class="box1">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Donald_Norman_at_AWF05.jpg/300px-Donald_Norman_at_AWF05.jpg" alt="Donald_Norman">
-        <div class="text">
-          <h3>Author</h3>
-          <h4>Donald Norman</h4>
-          <p>Donald Arthur Norman (born December 25, 1935)[2][3] is an American researcher, professor, and author.
-          Norman is the director of The Design Lab at University of California, San Diego.[4] He is best known for
-          his books on design, especially The Design of Everyday Things. He is widely regarded for his expertise
-          in the fields of design, usability engineering, and cognitive science,[4] and has shaped the development
-          of the field...
-          </p>
-          <a href="#">Read more</a>
-        </div>
+      <div class="listExpert">
+        <label class="expert">
+          <input type="checkbox" name="">
+          All Experts
+        </label>
+        <label class="expert">
+          <input type="checkbox" name="">
+          Scientists
+        </label>
+        <label class="expert">
+          <input type="checkbox" name="">
+          Writers
+        </label>
+        <label class="expert">
+          <input type="checkbox" name="">
+          Others
+        </label>
       </div>
-      <div class="box2">
-        <div class="image"><img class="nelly" src="images/nellyBenHayoun.jpeg" alt=""></div>
-        <div class="text">
-          <h3>Designer</h3>
-          <h4>Nelly Ben Hayoun</h4>
-          <p>Nelly Ben Hayoun is a French designer, artist and filmmaker.[1] Born in Valence, Drôme, France, she now
-          resides in London, United Kingdom. She serves on the Advisory Council of METI (Messaging Extraterrestrial
-          Intelligence) and is the designer of experiences at the SETI Institute (Search for Extraterrestrial Intelligence
-          Institute).[2][3] She is also an exhibitor and keynote speaker who has worked with museums and design
-          centres across the world...</p>
-          <a href="#">Read more</a>
-        </div>
-      </div>
-      <div class="box3">
-        <img src="images/peterJamesThomas.jpeg" alt="">
-        <div class="text">
-          <h3>Entrepreneur</h3>
-          <h4>Peter James Thomas</h4>
-          <p>...</p>
-          <a href="#">Read more</a>
-        </div>
-      </div>
-    <p></p>
-              <script>
-              document.querySelector('.select-field-category').addEventListener('click',()=>{
+  </div>
+
+  <div class="box1">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Donald_Norman_at_AWF05.jpg/300px-Donald_Norman_at_AWF05.jpg" alt="Donald_Norman">
+    <div class="text">
+      <h3>Author</h3>
+      <h4>Donald Norman</h4>
+      <p>Donald Arthur Norman (born December 25, 1935)[2][3] is an American researcher, professor, and author.
+      Norman is the director of The Design Lab at University of California, San Diego.[4] He is best known for
+      his books on design, especially The Design of Everyday Things. He is widely regarded for his expertise
+      in the fields of design, usability engineering, and cognitive science,[4] and has shaped the development
+      of the field...
+      </p>
+      <a href="#">Read more</a>
+    </div>
+  </div>
+  <div class="box2">
+    <div class="image"><img class="nelly" src="images/nellyBenHayoun.jpeg" alt=""></div>
+    <div class="text">
+      <h3>Designer</h3>
+      <h4>Nelly Ben Hayoun</h4>
+      <p>Nelly Ben Hayoun is a French designer, artist and filmmaker.[1] Born in Valence, Drôme, France, she now
+      resides in London, United Kingdom. She serves on the Advisory Council of METI (Messaging Extraterrestrial
+      Intelligence) and is the designer of experiences at the SETI Institute (Search for Extraterrestrial Intelligence
+      Institute).[2][3] She is also an exhibitor and keynote speaker who has worked with museums and design
+      centres across the world...</p>
+      <a href="#">Read more</a>
+    </div>
+  </div>
+  <div class="box3">
+    <img src="images/peterJamesThomas.jpeg" alt="">
+    <div class="text">
+      <h3>Entrepreneur</h3>
+      <h4>Peter James Thomas</h4>
+      <p>...</p>
+      <a href="#">Read more</a>
+    </div>
+  </div>
+<p></p>
+          <script>
+          document.querySelector('.select-field-category').addEventListener('click',()=>
+            {
               document.querySelector('.listCatergory').classList.toggle('show');
               document.querySelector('.down-arrow-category').classList.toggle('rotate180');
-              });
+            });
 
-              document.querySelector('.select-field-expert').addEventListener('click',()=>{
+          document.querySelector('.select-field-expert').addEventListener('click',()=>
+            {
               document.querySelector('.listExpert').classList.toggle('show');
               document.querySelector('.down-arrow-expert').classList.toggle('rotate180');
-              });
-              </script>
-</html>
+            });
+          </script>
