--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -8,11 +8,17 @@
 </head>
 <body>
 <header>
-    Gameverse
+
 </header>
 
 <main>
     {{{body}}}
+    <script>
+        document.querySelector('.select-field').addEventListener('click',()=>{
+            document.querySelector('.list').classList.toggle('show');
+            document.querySelector('.down-arrow').classList.toggle('rotate180');
+        });
+    </script>
 </main>
 
 <footer>
