add parsing of persons and eventhandler for checkboxes

--- a/layout.css
+++ b/layout.css
@@ -56,7 +56,7 @@ img {
     object-position: right;
 }
 
-.box1, .box2, .box3 {
+.box {
     display: flex;
     justify-content: flex-start;
     align-items: center;
